@@ -19,6 +19,13 @@ playSound "d_fanfare";
 d_mt_marker_triggers = [];
 #endif
 
+if (!isNil "d_client_barmhqtrigs") then {
+	{
+		deleteVehicle _x;
+	} forEach d_client_barmhqtrigs;
+	d_client_barmhqtrigs = [];
+};
+
 if (!isNil "d_deletecamptrigs") then {
 	{
 		deleteVehicle _x;
