@@ -1,2 +1,6 @@
 STR_DOM_MISSIONSTRING_1575
 STR_DOM_MISSIONSTRING_2079
+STR_DOM_MISSIONSTRING_2080
+STR_DOM_MISSIONSTRING_2081
+STR_DOM_MISSIONSTRING_2082
+STR_DOM_MISSIONSTRING_2083
