@@ -189,3 +189,7 @@ STR_DOM_MISSIONSTRING_2074
 STR_DOM_MISSIONSTRING_2075
 STR_DOM_MISSIONSTRING_2076
 STR_DOM_MISSIONSTRING_2079
+STR_DOM_MISSIONSTRING_2080
+STR_DOM_MISSIONSTRING_2081
+STR_DOM_MISSIONSTRING_2082
+STR_DOM_MISSIONSTRING_2083
