@@ -7,3 +7,7 @@ STR_DOM_MISSIONSTRING_PRISONERSANDEXPLOSIVES_DEFUSE
 STR_DOM_MISSIONSTRING_PRISONERSANDEXPLOSIVES_TRIGGERMAN
 STR_DOM_MISSIONSTRING_MT_RADIUS
 STR_DOM_MISSIONSTRING_2079
+STR_DOM_MISSIONSTRING_2080
+STR_DOM_MISSIONSTRING_2081
+STR_DOM_MISSIONSTRING_2082
+STR_DOM_MISSIONSTRING_2083
